--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/stack": "^6.3.16",
     "apisauce": "^3.0.0",
     "expo": "~48.0.9",
+    "expo-checkbox": "^2.3.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.5.2",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
