--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-paper": "^5.5.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
